--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/vite.svg"
+      href="/ulbi.jpg"
     />
     <meta
       name="viewport"
@@ -15,9 +15,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script
-      type="module"
-      src="/src/app/main.tsx"
-    ></script>
+    <script type="module" src="/src/app/main.tsx"></script>
   </body>
 </html>
